--- a/templates/item/item-power-sheet.hbs
+++ b/templates/item/item-power-sheet.hbs
@@ -2,14 +2,14 @@
   <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
   <div class="header-fields">
     <h1><input name="name" type="text" value="{{item.name}}" placeholder="Power Name"/></h1>
-    <div class="grid grid-2col">
-      <div class="flexrow">
-        <label class="resource-label">Detail:</label>
+    <div class="grid grid-4col info">
+      <div class="left-label flexrow grid-span-3">
+        <label class="flexshrink">Detail:</label>
         <input type="text" name="system.detail" value="{{system.detail}}" data-dtype="String"/>
       </div>
-      <div class="resource">
+      <div class="center-label">
         <input type="checkbox" name="system.addRiskDie" {{checked system.addRiskDie}}/>
-        <label class="resource-label">Risk Die?</label>
+        <label class="">Risk Die?</label>
       </div>
     </div>
     <textarea type="text" name="system.description" value="{{system.description}}">{{system.description}}</textarea>
