--- a/scss/components/_sheets.scss
+++ b/scss/components/_sheets.scss
@@ -116,21 +116,34 @@
       margin-right: 5px;
     }
 
-    input[type="text"] {
-      height: auto;
+    .info {
+      height: 30px;
     }
 
-    .expertise {
-      grid-column: 2 / span 2;
+    input[type="text"] {
+      height: 100%;
+    }
 
-      select {
-        min-width: 0;
-        max-width: 100%;
+    select {
+      min-width: 0;
+      max-width: 100%;
+    }
+
+    .left-label {
+      align-items: center;
+
+      label {
+        margin-right: 5px;
       }
     }
 
+    .center-label {
+      display: flex;
+      align-items: center;
+    }
+
     textarea {
-      height: 94px;
+      height: 103px;
     }
   }
 }
