--- a/templates/item/item-gear-sheet.hbs
+++ b/templates/item/item-gear-sheet.hbs
@@ -2,13 +2,13 @@
   <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}"/>
   <div class="header-fields">
     <h1><input name="name" type="text" value="{{item.name}}" placeholder="{{localize "ATDC.item.name.placeholder"}}"/></h1>
-    <div class="grid grid-2col">
-      <div class="resource">
-        <label class="resource-label">{{localize "ATDC.item.gear.tags.label"}}</label>
+    <div class="grid grid-3col info">
+      <div class="flexrow grid-span-2 left-label">
+        <label class="flexshrink">{{localize "ATDC.item.gear.tags.label"}}</label>
         <input type="text" name="system.tags" value="{{system.tags}}" data-dtype="String"/>
       </div>
-      <div class="resource">
-        <label class="resource-label">{{localize "ATDC.item.gear.load.label"}}</label>
+      <div class="flexrow left-label">
+        <label class="flexshrink">{{localize "ATDC.item.gear.load.label"}}</label>
         <input type="text" name="system.load" value="{{system.load}}" data-dtype="Number"/>
       </div>
     </div>
